--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "date-fns": "^2.26.0",
     "dotenv": "^10.0.0",
     "isomorphic-fetch": "^3.0.0",
     "netlify-identity-widget": "^1.9.2",
