--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "date-fns": "^2.26.0",
     "dotenv": "^10.0.0",
     "isomorphic-fetch": "^3.0.0",
+    "marked": "^4.0.5",
     "netlify-identity-widget": "^1.9.2",
     "sirv-cli": "^1.0.0",
     "slugify": "^1.6.3",
