--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "date-fns": "^2.26.0",
+    "dompurify": "^2.3.3",
     "dotenv": "^10.0.0",
     "isomorphic-fetch": "^3.0.0",
     "marked": "^4.0.5",
